implemented style guide